--- a/WebRoot/images/bloginbbs_data/blt_ars_black.htm
+++ b/WebRoot/images/bloginbbs_data/blt_ars_black.htm
@@ -6,12 +6,12 @@
 <title>出错了</title>
 </head>
 <body>
-<h1>文件不存在</h1>
+	<h1>文件不存在</h1>
 
-您要访问的文件
-不存在。<<a href="/">返回ChinaJavaWorld Blog</a>
-                                                                                                      
-                                                   
+	您要访问的文件 不存在。<
+	<a href="/">返回ChinaJavaWorld Blog</a>
+
+
 </body>
 </html>
 
